Fix vertical alignment in new ad preview page

--- a/public/_templates/bulma/css/forum.css
+++ b/public/_templates/bulma/css/forum.css
@@ -116,3 +116,11 @@ a.neutral-link {
 .navbar-end form {
   width: 100%;
 }
+
+/* Fix vertical alignment of text between buttons
+   in the submission form of the new job ad preview page. */
+#publish_form .content:has(>.button) {
+  display: flex;
+  gap: .2em;
+  align-items: baseline;
+}
